// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > CustomContent 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      data-placement="top"
      data-slot="tabWrapper"
      data-vertical="horizontal"
    >
      <div
        aria-label="Developer profile"
        class="inline-flex w-full"
        data-slot="base"
      >
        <div
          aria-label="Developer profile"
          aria-orientation="horizontal"
          class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
          data-collection="react-aria-:r1c:"
          data-slot="tabList"
          id="react-aria-:r1d:"
          role="tablist"
        >
          <button
            aria-controls="react-aria-:r1d:-tabpanel-profile"
            aria-selected="true"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r1c:"
            data-key="profile"
            data-selected="true"
            data-slot="tab"
            id="react-aria-:r1d:-tab-profile"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
              data-slot="cursor"
              style="opacity: 1;"
            />
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Profile
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r1c:"
            data-key="settings"
            data-slot="tab"
            id="react-aria-:r1d:-tab-settings"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Settings
            </div>
          </button>
        </div>
      </div>
      <div
        aria-labelledby="react-aria-:r1d:-tab-profile"
        class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
        data-focus="false"
        data-focus-visible="false"
        data-slot="panel"
        id="react-aria-:r1d:-tabpanel-profile"
        role="tabpanel"
        tabindex="0"
      >
        <div
          class="p-4"
        >
          <div
            class="mb-4 flex items-center gap-4"
          >
            <div
              class="h-16 w-16 rounded-full bg-gray-200"
            />
            <div>
              <h3
                class="text-xl font-bold"
              >
                404 Name Not Found
              </h3>
              <p
                class="text-gray-600"
              >
                Professional Googler
              </p>
            </div>
          </div>
          <p
            class="text-gray-700"
          >
            I turn coffee into code and bugs into features. Sometimes I even write code that works. My code works on my machine, and that's all that matters.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      data-placement="top"
      data-slot="tabWrapper"
      data-vertical="horizontal"
    >
      <div
        aria-label="Basic tabs example"
        class="inline-flex w-full"
        data-slot="base"
      >
        <div
          aria-label="Basic tabs example"
          aria-orientation="horizontal"
          class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
          data-collection="react-aria-:r0:"
          data-slot="tabList"
          id="react-aria-:r1:"
          role="tablist"
        >
          <button
            aria-controls="react-aria-:r1:-tabpanel-coffee"
            aria-selected="true"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r0:"
            data-key="coffee"
            data-selected="true"
            data-slot="tab"
            id="react-aria-:r1:-tab-coffee"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
              data-slot="cursor"
              style="opacity: 1;"
            />
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Coffee
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r0:"
            data-key="tea"
            data-slot="tab"
            id="react-aria-:r1:-tab-tea"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Tea
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r0:"
            data-key="water"
            data-slot="tab"
            id="react-aria-:r1:-tab-water"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Water
            </div>
          </button>
        </div>
      </div>
      <div
        aria-labelledby="react-aria-:r1:-tab-coffee"
        class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
        data-focus="false"
        data-focus-visible="false"
        data-slot="panel"
        id="react-aria-:r1:-tabpanel-coffee"
        role="tabpanel"
        tabindex="0"
      >
        The liquid that turns "leave me alone" into "good morning!"
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DifferentPlacements 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      class="space-y-8"
    >
      <div
        data-placement="top"
        data-slot="tabWrapper"
        data-vertical="horizontal"
      >
        <div
          aria-label="Top tabs"
          class="inline-flex w-full"
          data-slot="base"
        >
          <div
            aria-label="Top tabs"
            aria-orientation="horizontal"
            class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
            data-collection="react-aria-:r1k:"
            data-slot="tabList"
            id="react-aria-:r1l:"
            role="tablist"
          >
            <button
              aria-controls="react-aria-:r1l:-tabpanel-1"
              aria-selected="true"
              class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
              data-collection="react-aria-:r1k:"
              data-key="1"
              data-selected="true"
              data-slot="tab"
              id="react-aria-:r1l:-tab-1"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                data-slot="cursor"
                style="opacity: 1;"
              />
              <div
                class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                data-slot="tabContent"
              >
                Plan A
              </div>
            </button>
            <button
              aria-selected="false"
              class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
              data-collection="react-aria-:r1k:"
              data-key="2"
              data-slot="tab"
              id="react-aria-:r1l:-tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <div
                class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                data-slot="tabContent"
              >
                Plan B
              </div>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="react-aria-:r1l:-tab-1"
          class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
          data-focus="false"
          data-focus-visible="false"
          data-slot="panel"
          id="react-aria-:r1l:-tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          When all else fails, this won't work either
        </div>
      </div>
      <div
        class="flex flex-col-reverse"
        data-placement="bottom"
        data-slot="tabWrapper"
        data-vertical="horizontal"
      >
        <div
          aria-label="Bottom tabs"
          class="inline-flex w-full"
          data-slot="base"
        >
          <div
            aria-label="Bottom tabs"
            aria-orientation="horizontal"
            class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
            data-collection="react-aria-:r1s:"
            data-slot="tabList"
            id="react-aria-:r1t:"
            role="tablist"
          >
            <button
              aria-controls="react-aria-:r1t:-tabpanel-1"
              aria-selected="true"
              class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
              data-collection="react-aria-:r1s:"
              data-key="1"
              data-selected="true"
              data-slot="tab"
              id="react-aria-:r1t:-tab-1"
              role="tab"
              tabindex="0"
              type="button"
            >
              <span
                class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                data-slot="cursor"
                style="opacity: 1;"
              />
              <div
                class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                data-slot="tabContent"
              >
                Success
              </div>
            </button>
            <button
              aria-selected="false"
              class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
              data-collection="react-aria-:r1s:"
              data-key="2"
              data-slot="tab"
              id="react-aria-:r1t:-tab-2"
              role="tab"
              tabindex="-1"
              type="button"
            >
              <div
                class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                data-slot="tabContent"
              >
                Failure
              </div>
            </button>
          </div>
        </div>
        <div
          aria-labelledby="react-aria-:r1t:-tab-1"
          class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
          data-focus="false"
          data-focus-visible="false"
          data-slot="panel"
          id="react-aria-:r1t:-tabpanel-1"
          role="tabpanel"
          tabindex="0"
        >
          Works on my machine! 🤷‍♂️
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > DisabledTabs 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      data-placement="top"
      data-slot="tabWrapper"
      data-vertical="horizontal"
    >
      <div
        aria-label="Tabs with disabled items"
        class="inline-flex w-full"
        data-slot="base"
      >
        <div
          aria-label="Tabs with disabled items"
          aria-orientation="horizontal"
          class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
          data-collection="react-aria-:rk:"
          data-slot="tabList"
          id="react-aria-:rl:"
          role="tablist"
        >
          <button
            aria-controls="react-aria-:rl:-tabpanel-monday"
            aria-selected="true"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:rk:"
            data-key="monday"
            data-selected="true"
            data-slot="tab"
            id="react-aria-:rl:-tab-monday"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
              data-slot="cursor"
              style="opacity: 1;"
            />
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Monday
            </div>
          </button>
          <button
            aria-disabled="true"
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:rk:"
            data-disabled="true"
            data-key="weekend"
            data-slot="tab"
            id="react-aria-:rl:-tab-weekend"
            role="tab"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Weekend
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:rk:"
            data-key="meeting"
            data-slot="tab"
            id="react-aria-:rl:-tab-meeting"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Meeting
            </div>
          </button>
          <button
            aria-disabled="true"
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:rk:"
            data-disabled="true"
            data-key="vacation"
            data-slot="tab"
            id="react-aria-:rl:-tab-vacation"
            role="tab"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Vacation
            </div>
          </button>
        </div>
      </div>
      <div
        aria-labelledby="react-aria-:rl:-tab-monday"
        class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
        data-focus="false"
        data-focus-visible="false"
        data-slot="panel"
        id="react-aria-:rl:-tabpanel-monday"
        role="tabpanel"
        tabindex="0"
      >
        The day everyone pretends their weekend emails got lost in spam.
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Radius 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      class="space-y-8"
    >
      <div
        class="min-h-[200px]"
      >
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          No Radius (Sharp Corners Like My Code Reviews)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="No radius tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="No radius tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-none w-full"
              data-collection="react-aria-:r24:"
              data-slot="tabList"
              id="react-aria-:r25:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r25:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r24:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r25:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-none bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Square
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r24:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r25:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Sharp
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r24:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r25:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Angular
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r25:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r25:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            As straight-edged as my debugging skills
          </div>
        </div>
      </div>
      <div
        class="min-h-[200px]"
      >
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Small Radius (Slightly Softer Than My Error Messages)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Small radius tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Small radius tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent border-medium border-default-200 shadow-sm rounded-medium w-full"
              data-collection="react-aria-:r2e:"
              data-slot="tabList"
              id="react-aria-:r2f:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r2f:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2e:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r2f:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Gentle
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2e:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r2f:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Subtle
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2e:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r2f:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Soft
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r2f:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r2f:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Just a hint of roundness
          </div>
        </div>
      </div>
      <div
        class="min-h-[200px]"
      >
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Medium Radius (Default, Like My Commit Frequency)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Medium radius tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Medium radius tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent rounded-medium w-full"
              data-collection="react-aria-:r2o:"
              data-slot="tabList"
              id="react-aria-:r2p:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r2p:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2o:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r2p:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Balanced
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2o:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r2p:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Middle
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r2o:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r2p:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Default
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r2p:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r2p:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Not too sharp, not too round
          </div>
        </div>
      </div>
      <div
        class="min-h-[200px]"
      >
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Large Radius (Smooth Like My Git Workflow)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Large radius tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Large radius tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-large w-full"
              data-collection="react-aria-:r32:"
              data-slot="tabList"
              id="react-aria-:r33:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r33:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r32:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r33:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-medium bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Rounder
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r32:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r33:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Smoother
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r32:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r33:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Softer
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r33:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r33:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Getting quite curvy now
          </div>
        </div>
      </div>
      <div
        class="min-h-[200px]"
      >
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Full Radius (Round Like My Debug Loops)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Full radius tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Full radius tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent border-medium border-default-200 shadow-sm rounded-full w-full"
              data-collection="react-aria-:r3c:"
              data-slot="tabList"
              id="react-aria-:r3d:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r3d:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-full data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3c:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r3d:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-full bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Circular
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-full data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3c:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r3d:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Pill
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-full data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3c:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r3d:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Round
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r3d:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r3d:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            As round as my infinite loops
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Sizes 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      class="space-y-8"
    >
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Small (Like My Patience)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Small tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Small tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
              data-collection="react-aria-:r3m:"
              data-slot="tabList"
              id="react-aria-:r3n:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r3n:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-7 text-tiny rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3m:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r3n:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Espresso
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-7 text-tiny rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3m:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r3n:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Doppio
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-7 text-tiny rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r3m:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r3n:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Triple
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r3n:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r3n:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Small but mighty, like your deadline
          </div>
        </div>
      </div>
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Medium (Like My Coffee)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Medium tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Medium tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
              data-collection="react-aria-:r40:"
              data-slot="tabList"
              id="react-aria-:r41:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r41:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r40:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r41:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Morning
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r40:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r41:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Noon
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r40:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r41:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Night
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r41:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r41:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Don't talk to me
          </div>
        </div>
      </div>
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Large (Like My TODO List)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Large tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Large tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-large w-full"
              data-collection="react-aria-:r4a:"
              data-slot="tabList"
              id="react-aria-:r4b:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r4b:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-9 text-medium rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4a:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r4b:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-medium bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Bugs
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-9 text-medium rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4a:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r4b:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  More Bugs
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-9 text-medium rounded-medium data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4a:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r4b:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Even More
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r4b:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r4b:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            They're not bugs, they're features in disguise
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > Variants 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      class="space-y-8"
    >
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Solid Variant (Like My Excuses)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Solid tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Solid tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
              data-collection="react-aria-:r4k:"
              data-slot="tabList"
              id="react-aria-:r4l:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r4l:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4k:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r4l:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Monday
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4k:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r4l:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Wednesday
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4k:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r4l:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Friday
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r4l:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r4l:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            My alarm didn't ring
          </div>
        </div>
      </div>
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Bordered Variant (Like My Life Choices)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Bordered tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Bordered tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent border-medium border-default-200 shadow-sm rounded-medium w-full"
              data-collection="react-aria-:r4u:"
              data-slot="tabList"
              id="react-aria-:r4v:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r4v:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4u:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r4v:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Sleep
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4u:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r4v:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Work
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r4u:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r4v:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Coffee
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r4v:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r4v:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            A distant memory
          </div>
        </div>
      </div>
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Light Variant (Like My Bank Account)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Light tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Light tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent rounded-medium w-full"
              data-collection="react-aria-:r58:"
              data-slot="tabList"
              id="react-aria-:r59:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r59:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r58:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r59:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Salary
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r58:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r59:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Savings
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r58:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r59:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Budget
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r59:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r59:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            Here today, gone tomorrow
          </div>
        </div>
      </div>
      <div>
        <h3
          class="mb-2 text-sm font-medium text-gray-500"
        >
          Underlined Variant (Like My Commit Messages)
        </h3>
        <div
          data-placement="top"
          data-slot="tabWrapper"
          data-vertical="horizontal"
        >
          <div
            aria-label="Underlined tabs"
            class="inline-flex w-full"
            data-slot="base"
          >
            <div
              aria-label="Underlined tabs"
              aria-orientation="horizontal"
              class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-transparent dark:bg-transparent w-full rounded-none"
              data-collection="react-aria-:r5i:"
              data-slot="tabList"
              id="react-aria-:r5j:"
              role="tablist"
            >
              <button
                aria-controls="react-aria-:r5j:-tabpanel-1"
                aria-selected="true"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r5i:"
                data-key="1"
                data-selected="true"
                data-slot="tab"
                id="react-aria-:r5j:-tab-1"
                role="tab"
                tabindex="0"
                type="button"
              >
                <span
                  class="absolute z-0 h-[2px] w-[80%] bottom-0 shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] bg-foreground rounded-none"
                  data-slot="cursor"
                  style="opacity: 1;"
                />
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Fix
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r5i:"
                data-key="2"
                data-slot="tab"
                id="react-aria-:r5j:-tab-2"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Update
                </div>
              </button>
              <button
                aria-selected="false"
                class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-none data-[hover-unselected=true]:opacity-100"
                data-collection="react-aria-:r5i:"
                data-key="3"
                data-slot="tab"
                id="react-aria-:r5j:-tab-3"
                role="tab"
                tabindex="-1"
                type="button"
              >
                <div
                  class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-foreground text-foreground"
                  data-slot="tabContent"
                >
                  Refactor
                </div>
              </button>
            </div>
          </div>
          <div
            aria-labelledby="react-aria-:r5j:-tab-1"
            class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
            data-focus="false"
            data-focus-visible="false"
            data-slot="panel"
            id="react-aria-:r5j:-tabpanel-1"
            role="tabpanel"
            tabindex="0"
          >
            "Fixed bug" (Created 3 new ones)
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > VerticalLayout 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      class="flex"
      data-placement="start"
      data-slot="tabWrapper"
      data-vertical="vertical"
    >
      <div
        aria-label="Developer life cycle"
        class="inline-flex w-full h-[300px]"
        data-slot="base"
      >
        <div
          aria-label="Developer life cycle"
          aria-orientation="horizontal"
          class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium flex-col w-48"
          data-collection="react-aria-:r10:"
          data-slot="tabList"
          id="react-aria-:r11:"
          role="tablist"
        >
          <button
            aria-controls="react-aria-:r11:-tabpanel-code"
            aria-selected="true"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r10:"
            data-key="code"
            data-selected="true"
            data-slot="tab"
            id="react-aria-:r11:-tab-code"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
              data-slot="cursor"
              style="opacity: 1;"
            />
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Writing Code
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r10:"
            data-key="debug"
            data-slot="tab"
            id="react-aria-:r11:-tab-debug"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Debugging
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r10:"
            data-key="coffee"
            data-slot="tab"
            id="react-aria-:r11:-tab-coffee"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              Coffee Break
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:r10:"
            data-key="stackoverflow"
            data-slot="tab"
            id="react-aria-:r11:-tab-stackoverflow"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              StackOverflow
            </div>
          </button>
        </div>
      </div>
      <div
        aria-labelledby="react-aria-:r11:-tab-code"
        class="data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 py-0 px-3"
        data-focus="false"
        data-focus-visible="false"
        data-slot="panel"
        id="react-aria-:r11:-tabpanel-code"
        role="tabpanel"
        tabindex="0"
      >
        Step 1: Write code
Step 2: Wonder why it works
Step 3: Don't touch it ever again
      </div>
    </div>
  </div>
</div>
`;

exports[`Story Snapshots > WithIcons 1`] = `
<div>
  <div
    class="w-[600px]"
  >
    <div
      data-placement="top"
      data-slot="tabWrapper"
      data-vertical="horizontal"
    >
      <div
        aria-label="Tabs with icons"
        class="inline-flex w-full"
        data-slot="base"
      >
        <div
          aria-label="Tabs with icons"
          aria-orientation="horizontal"
          class="flex p-1 h-fit gap-2 items-center flex-nowrap overflow-x-scroll scrollbar-hide bg-default-100 rounded-medium w-full"
          data-collection="react-aria-:ra:"
          data-slot="tabList"
          id="react-aria-:rb:"
          role="tablist"
        >
          <button
            aria-controls="react-aria-:rb:-tabpanel-cat"
            aria-selected="true"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:ra:"
            data-key="cat"
            data-selected="true"
            data-slot="tab"
            id="react-aria-:rb:-tab-cat"
            role="tab"
            tabindex="0"
            type="button"
          >
            <span
              class="absolute z-0 inset-0 rounded-small bg-background dark:bg-default shadow-small"
              data-slot="cursor"
              style="opacity: 1;"
            />
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              <div
                class="flex items-center gap-2"
              >
                <span>
                  🐱
                </span>
                <span>
                  Cat Pictures
                </span>
              </div>
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:ra:"
            data-key="dog"
            data-slot="tab"
            id="react-aria-:rb:-tab-dog"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              <div
                class="flex items-center gap-2"
              >
                <span>
                  🐕
                </span>
                <span>
                  Dog Pictures
                </span>
              </div>
            </div>
          </button>
          <button
            aria-selected="false"
            class="z-0 w-full px-3 py-1 flex group relative justify-center items-center cursor-pointer transition-opacity tap-highlight-transparent data-[disabled=true]:cursor-not-allowed data-[disabled=true]:opacity-30 outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 h-8 text-small rounded-small data-[hover-unselected=true]:opacity-100"
            data-collection="react-aria-:ra:"
            data-key="fish"
            data-slot="tab"
            id="react-aria-:rb:-tab-fish"
            role="tab"
            tabindex="-1"
            type="button"
          >
            <div
              class="relative z-10 whitespace-nowrap transition-colors group-data-[selected=true]:text-default-foreground text-foreground"
              data-slot="tabContent"
            >
              <div
                class="flex items-center gap-2"
              >
                <span>
                  🐠
                </span>
                <span>
                  Fish Pictures
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
      <div
        aria-labelledby="react-aria-:rb:-tab-cat"
        class="py-3 px-1 data-[inert=true]:hidden outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2"
        data-focus="false"
        data-focus-visible="false"
        data-slot="panel"
        id="react-aria-:rb:-tabpanel-cat"
        role="tabpanel"
        tabindex="0"
      >
        Loading cat pictures... Just kidding, your cat walked across the keyboard and deleted them all.
      </div>
    </div>
  </div>
</div>
`;
